--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Play online game Lucky broker for free">
-    <meta property="og:description"
-        content="New modern online games based on real events in the global financial market">
-    <meta property="og:url" content="https://www.callofthehunt.com/">
-    <meta property="og:site_name" content="Call of the Hunt">
-    <meta property="article:publisher" content="https://www.facebook.com/COTHgame/">
-    <meta property="og:image" content="img/kickstarter-cover-v1.webp">
-    <meta property="og:image:width" content="1024">
-    <meta property="og:image:height" content="576">
-    <meta property="fb:app_id" content="587938521944045">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="img/kickstarter-cover-v1.webp">
-    <meta name="twitter:creator" content="@COTHgame">
-    <meta name="twitter:site" content="@COTHgame">
+    <meta property="og:description" content="New modern online games based on real events in the global financial market">
+    <meta property="og:url" content="https://galleontr.com/">
+    <meta property="og:site_name" content="LuckyBroker">
+    <meta property="og:image" content="img/luckybrocker_cover_image.jpg">
+    <meta property="og:image:width" content="630">
+    <meta property="og:image:height" content="352">
     <!--End Meta-->
     <!--Icons-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -30,24 +23,23 @@
     <link rel="apple-touch-icon" sizes="152x152" href="img/favicon72x72.ico">
     <link rel="apple-touch-icon" sizes="167x167" href="img/favicon144x144.ico">
     <link rel="stylesheet" href="css/stylesheet.min.css">
-
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-5H729SH');</script>
-    <!-- End Google Tag Manager -->
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-5H729SH');</script>
+<!-- End Google Tag Manager -->
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5H729SH" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5H729SH" height="0" width="0"
+        style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <header class="header" id="header">
         <div class="container">
             <a href="/" class="header-logo">
