--- a/index.html
+++ b/index.html
@@ -211,44 +211,32 @@
             <div class="screenshots-slider">
                 <div class="screenshots-slider__item">
                     <picture>
-                        <source srcset="img/slider.webp" type="image/webp">
-                        <img src="img/slider.jpg" alt="slider">
+                        <source srcset="img/screenshot_1.webp" type="image/webp">
+                        <img src="img/screenshot_1.jpg" alt="slider">
                     </picture>
                 </div>
                 <div class="screenshots-slider__item">
                     <picture>
-                        <source srcset="img/slider.webp" type="image/webp">
-                        <img src="img/slider.jpg" alt="slider">
+                        <source srcset="img/screenshot_1.webp" type="image/webp">
+                        <img src="img/screenshot_1.jpg" alt="slider">
                     </picture>
                 </div>
                 <div class="screenshots-slider__item">
                     <picture>
-                        <source srcset="img/slider.webp" type="image/webp">
-                        <img src="img/slider.jpg" alt="slider">
+                        <source srcset="img/screenshot_1.webp" type="image/webp">
+                        <img src="img/screenshot_1.jpg" alt="slider">
                     </picture>
                 </div>
                 <div class="screenshots-slider__item">
                     <picture>
-                        <source srcset="img/slider.webp" type="image/webp">
-                        <img src="img/slider.jpg" alt="slider">
+                        <source srcset="img/screenshot_1.webp" type="image/webp">
+                        <img src="img/screenshot_1.jpg" alt="slider">
                     </picture>
                 </div>
                 <div class="screenshots-slider__item">
                     <picture>
-                        <source srcset="img/slider.webp" type="image/webp">
-                        <img src="img/slider.jpg" alt="slider">
-                    </picture>
-                </div>
-                <div class="screenshots-slider__item">
-                    <picture>
-                        <source srcset="img/slider.webp" type="image/webp">
-                        <img src="img/slider.jpg" alt="slider">
-                    </picture>
-                </div>
-                <div class="screenshots-slider__item">
-                    <picture>
-                        <source srcset="img/slider.webp" type="image/webp">
-                        <img src="img/slider.jpg" alt="slider">
+                        <source srcset="img/screenshot_1.webp" type="image/webp">
+                        <img src="img/screenshot_1.jpg" alt="slider">
                     </picture>
                 </div>
             </div>
