--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <a href="#" class="btn-main">Play now</a>
             </div>
             <div class="video__wrapper">
-                <div class="youtube" data-embed="B09a8RCpL08">
+                <div class="youtube" data-embed="0t6U9iRgD7k">
                     <button type="button" class="play-button">
                         <picture>
                             <source srcset="img/play.svg" type="image/webp">
