Video header fix

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section class="video" id="video">
         <div class="container">
             <div class="video__intro">
-                <h2>Watch the video and see how it works</h2>
+                <h2>Gameplay video</h2>
                 <p>Absolutely new game that is completely different for its game process! It uses real Forex quotes
                     instead of random number generation (RNG).</p>
                 <a href="#" class="btn-main">Play now</a>
