Prime link added

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="facts__honest">
                 <div class="facts__honest-intro">
                     <h2>Honest and transparent!</h2>
-                    <p>Lucky Broker uses real Forex qoutes from leading data provider - Prime (https://primeatlas.com/)
+                    <p>Lucky Broker uses real Forex qoutes from leading data provider - Prime (<a href="https://primeatlas.com/">https://primeatlas.com/</a>)
                         instead of "black box" generating numbers. </p>
                     <p>You know your reward in the beggining of the session in advance. It is up to you to decide - does
                         the bet meet your reward expectations. </p>
