Footer links added

--- a/index.html
+++ b/index.html
@@ -286,26 +286,26 @@
                 <div class="footer-info">
                     <h5>Legal information</h5>
                     <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">How to play</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Legal Documents</a></li>
+                        <li><a href="https://galleon.games/en/help/about-us?utm_source=3_utps&utm_medium=footer">About Us</a></li>
+                        <li><a href="https://galleon.games/en/help/how-to-play/luckybroker?utm_source=3_utps&utm_medium=footer">How to play</a></li>
+                        <li><a href="https://galleon.games/en/help/faq?utm_source=3_utps&utm_medium=footer">FAQ</a></li>
+                        <li><a href="https://galleon.games/en/help/information/terms?utm_source=3_utps&utm_medium=footer">Legal Documents</a></li>
                     </ul>
                 </div>
                 <div class="footer-menu">
                     <h5>Menu</h5>
                     <ul>
-                        <li><a href="#">Video</a></li>
-                        <li><a href="#">Screenshots</a></li>
-                        <li><a href="#">Features</a></li>
+                        <li><a href="#video">Video</a></li>
+                        <li><a href="#screenshots">Screenshots</a></li>
+                        <li><a href="#features">Features</a></li>
                     </ul>
                 </div>
                 <div class="footer-more">
                     <h5>See more</h5>
                     <ul>
-                        <li><a href="#">Info</a></li>
-                        <li><a href="#">Quotes</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="https://galleon.games/en/help/about-us?utm_source=3_utps&utm_medium=footer">Info</a></li>
+                        <li><a href="https://galleon.games/en/quotes/quotations?utm_source=3_utps&utm_medium=footer">Quotes</a></li>
+                        <li><a href="https://galleon.games/en/support?utm_source=3_utps&utm_medium=footer">Support</a></li>
                     </ul>
                 </div>
                 <div class="footer-contacts">
