--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li><a href="#features" class="header-nav-features">Features</a></li>
                 </ul>
             </nav>
-            <a href="#" class="header-buy btn-main">Play now</a>
+            <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=header" class="header-buy btn-main">Play now</a>
         </div>
     </header>
     <section class="offer" id="offer">
@@ -79,7 +79,7 @@
                 <h1>Play online game Lucky broker for free</h1>
                 <p>New modern online games based on real events in the global financial market</p>
                 <div class="offer-btn">
-                    <a href="#" class="offer-more btn-main">Play now</a>
+                    <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=offer" class="offer-more btn-main">Play now</a>
                     <a href="#video" class="offer-buy btn-line">See more</a>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <h2>Gameplay video</h2>
                 <p>Absolutely new game that is completely different for its game process! It uses real Forex quotes
                     instead of random number generation (RNG).</p>
-                <a href="#" class="btn-main">Play now</a>
+                <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=video" class="btn-main">Play now</a>
             </div>
             <div class="video__wrapper">
                 <div class="youtube" data-embed="0t6U9iRgD7k">
@@ -139,7 +139,7 @@
                     instead of random number generation (RNG).</p>
                 <p>BAsed on the currency exchanges - you decide to win or loose. Lucky broker is an UNSEEN game on the
                     market of gambling! The rules and algorithms of the game are unlimited!</p>
-                <a href="#" class="description-buy btn-main">Play now</a>
+                <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=description" class="description-buy btn-main">Play now</a>
             </div>
             <picture>
                 <source srcset="img/desc-money.webp" type="image/webp">
@@ -160,7 +160,7 @@
                         instead of "black box" generating numbers. </p>
                     <p>You know your reward in the beggining of the session in advance. It is up to you to decide - does
                         the bet meet your reward expectations. </p>
-                    <a href="#" class="facts__honest-buy btn-main">Play now</a>
+                    <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=facts" class="facts__honest-buy btn-main">Play now</a>
                 </div>
                 <div class="facts__honest-img">
                     <picture>
@@ -180,7 +180,7 @@
                         instead of "black box" generating numbers. </p>
                     <p>You know your reward in the beggining of the session in advance. It is up to you to decide - does
                         the bet meet your reward expectations. </p>
-                    <a href="#" class="facts__Interactive-buy btn-main">Play now</a>
+                    <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=facts_interactive" class="facts__Interactive-buy btn-main">Play now</a>
                 </div>
                 <div class="facts__Interactive-img">
                     <picture>
@@ -240,7 +240,7 @@
                     </picture>
                 </div>
             </div>
-            <a href="#" class="description-buy btn-main">Play now</a>
+            <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=screenshots" class="description-buy btn-main">Play now</a>
         </div>
     </section>
     <footer class="footer" id="footer">
