Interactive section text changed

--- a/index.html
+++ b/index.html
@@ -176,10 +176,8 @@
             <div class="facts__Interactive">
                 <div class="facts__Interactive-intro">
                     <h2>Interactive!</h2>
-                    <p>Lucky Broker uses real Forex qoutes from leading data provider - Prime (https://primeatlas.com/)
-                        instead of "black box" generating numbers. </p>
-                    <p>You know your reward in the beggining of the session in advance. It is up to you to decide - does
-                        the bet meet your reward expectations. </p>
+                    <p>You are not just pressing a button, praying for random.</p>
+                    <p>Bring in your forecasts, analyse graphs and influence your results!</p>
                     <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=facts_interactive" class="facts__Interactive-buy btn-main">Play now</a>
                 </div>
                 <div class="facts__Interactive-img">
