LuckyBroker header text fix

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="offer-main">
                 <span>Galleon games</span>
-                <h1>Play online game Lucky broker for free</h1>
+                <h1>Play online game LuckyBroker for free</h1>
                 <p>New modern online games based on real events in the global financial market</p>
                 <div class="offer-btn">
                     <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=offer" class="offer-more btn-main">Play now</a>
