Lucky Broker changed to LuckyBroker

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="New modern online games based on real events in the global financial market">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Play online game Lucky broker for free">
+    <meta property="og:title" content="Play online game LuckyBroker for free">
     <meta property="og:description" content="New modern online games based on real events in the global financial market">
     <meta property="og:url" content="https://galleontr.com/">
     <meta property="og:site_name" content="LuckyBroker">
@@ -137,7 +137,7 @@
                 <h2>It is a novelty!</h2>
                 <p>Absolutely new game that is completely different for its game process! It uses real Forex quotes
                     instead of random number generation (RNG).</p>
-                <p>BAsed on the currency exchanges - you decide to win or loose. Lucky broker is an UNSEEN game on the
+                <p>BAsed on the currency exchanges - you decide to win or loose. LuckyBroker is an UNSEEN game on the
                     market of gambling! The rules and algorithms of the game are unlimited!</p>
                 <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=description" class="description-buy btn-main">Play now</a>
             </div>
@@ -156,7 +156,7 @@
             <div class="facts__honest">
                 <div class="facts__honest-intro">
                     <h2>Honest and transparent!</h2>
-                    <p>Lucky Broker uses real Forex qoutes from leading data provider - Prime (<a href="https://primeatlas.com/">https://primeatlas.com/</a>)
+                    <p>LuckyBroker uses real Forex qoutes from leading data provider - Prime (<a href="https://primeatlas.com/">https://primeatlas.com/</a>)
                         instead of "black box" generating numbers. </p>
                     <p>You know your reward in the beggining of the session in advance. It is up to you to decide - does
                         the bet meet your reward expectations. </p>
