Interactive section re-writtern

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
             <div class="facts__Interactive">
                 <div class="facts__Interactive-intro">
                     <h2>Interactive!</h2>
-                    <p>You are not just pressing a button, praying for random.</p>
-                    <p>Bring in your forecasts, analyse graphs and influence your results!</p>
+                    <p>You are not just pressing a button and, praying for random, watching the graphs doing the dance.</p>
+                    <p>You can use your market forecasts, analyse graphs and influence your results! Interactivity is in your hands, and you are the reason for your earnings!</p>
                     <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=facts_interactive" class="facts__Interactive-buy btn-main">Play now</a>
                 </div>
                 <div class="facts__Interactive-img">
