--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
             <a href="https://galleon.games/en/games/game/luckybroker?utm_source=3_utps&utm_medium=screenshots" class="description-buy btn-main">Play now</a>
         </div>
     </section>
+    <!--
     <footer class="footer" id="footer">
         <div class="container">
             <picture>
@@ -338,7 +339,7 @@
                 <img class="footer-money-img2" src="img/footer2.png" alt="money">
             </picture>
         </div>
-    </footer>
+    </footer>-->
     <script src="js/script.min.js"></script>
 </body>
 
